--- a/.gitmodules
+++ b/.gitmodules
@@ -15,4 +15,4 @@
 	url = https://github.com/scrooloose/nerdtree.git
 [submodule "bundle/vim-fswitch"]
 	path = bundle/vim-fswitch
-	url = https://github.com/vim-scripts/FSwitch.git
+	url = https://github.com/derekwyatt/vim-fswitch.git
